# transfunctions

./: .gitignore  .ruff.toml  README.md  pyproject.toml  requirements_dev.txt
.github/actions/ollama-code-review/: action.yml
.github/workflows/: code_review.yml  lint.yml  tests_and_coverage.yml
tests/documentation/: test_readme.py
tests/not_implemented_features/: test_decorator.py
tests/typechecking/decorators/: test_superfunction_typing.py  test_transfunction_typing.py
tests/typing/decorators/: test_superfunction_typing.py  test_transfunction_typing.py  test_variants_typing.py
tests/units/: test_decorator.py  test_universal_namespace.py  test_variants_and_patches.py
tests/units/decorators/: test_superfunction.py  test_transfunction.py
transfunctions/: __init__.py  _typing.py  bytecode_operations.py  decorator.py  errors.py  markers.py  transformer.py  types.py  typing.py  typing_compat.py  universal_namespace.py
transfunctions/decorators/: superfunction.py  transfunction.py
