[build-system]
requires = ["setuptools==68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transfunctions"
version = "0.0.7"
authors = [
  { name="Evgeniy Blinov", email="zheni-b@yandex.ru" },
]
description = 'Say NO to Python fragmentation on sync and async'
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'displayhooks>=0.0.4',
    'dill==0.4.0',
    'typing_extensions ; python_version <= "3.10"',
]

classifiers = [
    "Operating System :: OS Independent",
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Code Generators',
    'Framework :: AsyncIO',
]
keywords = [
    'async',
    'sync to async',
    'async to sync',
    'code generation',
    'ast manipulation',
    'metaprogramming',
    'magic',
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "coverage==7.6.1",
    "build==1.2.2.post1",
    "twine==6.1.0",
    "mypy==1.14.1",
    "ruff==0.9.9",
    "mutmut==3.2.3",
    "full_match==0.0.2",
]

[tool.setuptools.package-data]
"transfunctions" = ["py.typed"]

[tool.mutmut]
paths_to_mutate="transfunctions"
runner="pytest"

[project.urls]
'Source' = 'https://github.com/pomponchik/transfunctions'
'Tracker' = 'https://github.com/pomponchik/transfunctions/issues'
